--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -28,9 +28,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
+            android:layout_marginRight="8dp"
             android:textColor="@android:color/white"
+            android:textSize="16sp"
             android:visibility="gone"
-            tools:text="TEST TEST TEST TEST TEST TEST "
+            tools:text="TEST TEST TEST TEST TEST TESTTTTT"
             tools:visibility="visible"/>
 
         <Spinner
