--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <com.ovchinnikovm.android.vktop.RecyclerViewEmptySupport
+    <com.ovchinnikovm.android.vktop.lib.RecyclerViewEmptySupport
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
