--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -62,6 +62,7 @@
             android:visibility="gone"
             expandableTextView:maxCollapsedLines="14"
             tools:visibility="visible">
+
             <TextView
                 android:id="@id/expandable_text"
                 android:layout_width="match_parent"
@@ -73,9 +74,8 @@
                 android:paddingRight="16dp"
                 android:paddingStart="16dp"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
-                tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.'
-                />
+                android:textSize="16sp"
+                tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.' />
 
             <ImageButton
                 android:id="@id/expand_collapse"
@@ -86,7 +86,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:padding="16dp"/>
+                android:padding="16dp" />
         </com.ovchinnikovm.android.vktop.lib.ExpandableTextView>
 
         <ImageView
@@ -167,103 +167,39 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/post_author_icon"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="8dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@color/separator"
+            android:visibility="gone" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:layout_below="@id/post_author_icon"
-            android:layout_marginTop="8dp">
+            android:layout_below="@id/view"
+            android:gravity="center">
 
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
+            <ImageView
+                android:id="@+id/sort_type_img"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/sort_type_num"
+                android:layout_toStartOf="@+id/sort_type_num"
+                tools:srcCompat="@drawable/ic_heart" />
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_toLeftOf="@+id/likes"
-                    android:layout_toStartOf="@+id/likes"
-                    app:srcCompat="@drawable/ic_heart"/>
-
-                <TextView
-                    android:id="@+id/likes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
-                    android:text="0"
-                    tools:text="147"/>
-            </RelativeLayout>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/darker_gray"/>
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_toLeftOf="@+id/comments"
-                    android:layout_toStartOf="@+id/comments"
-                    app:srcCompat="@drawable/ic_comment"/>
-
-                <TextView
-                    android:id="@+id/comments"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
-                    android:text="0"
-                    tools:text="21"/>
-            </RelativeLayout>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/darker_gray"/>
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_toLeftOf="@+id/replies"
-                    android:layout_toStartOf="@+id/replies"
-                    app:srcCompat="@drawable/ic_bullhorn"/>
-
-                <TextView
-                    android:id="@+id/replies"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
-                    android:text="0"
-                    tools:text="12"/>
-            </RelativeLayout>
-        </LinearLayout>
+            <TextView
+                android:id="@+id/sort_type_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:textSize="24sp"
+                android:text="0"
+                tools:text="21"/>
+        </RelativeLayout>
 
     </RelativeLayout>
 
