--- a/app/src/main/res/layout/item_post_reply.xml
+++ b/app/src/main/res/layout/item_post_reply.xml
@@ -16,8 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginStart="16dp"/>
 
     <ImageView
         android:id="@+id/reply_icon"
@@ -53,7 +52,7 @@
         android:layout_alignStart="@+id/reply_icon"
         android:layout_below="@+id/att_group_name"
         android:paddingRight="32dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
         tools:text="21 июня в 21:15"/>
 
     <com.ovchinnikovm.android.vktop.lib.ExpandableTextView
