--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -92,6 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:text="@string/no_information"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             tools:text="1337"/>
     </LinearLayout>
@@ -117,6 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:text="@string/no_information"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             tools:text="41 секунда"/>
     </LinearLayout>
